# varnish-modules

./: mark-release.sh  varnish-modules_0.12.1.orig.tar.gz.delta  varnish-modules_0.12.1.orig.tar.gz.id  varnish-modules_0.15.0.orig.tar.gz.delta  varnish-modules_0.9.0.orig.tar.gz.delta  varnish-modules_0.9.0.orig.tar.gz.id  varnish-modules_0.9.1.orig.tar.gz.delta  varnish-modules_0.9.1.orig.tar.gz.id
debian/: changelog  control  rules
debian/patches/: 0099-hypernode-backport-allow-purge-multiple-soft-keys.patch  series
src/: Makefile.am  vmod_xkey.c
